--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server.js",
-		"server": "nodemon server.js"
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "",
 	"license": "ISC",
@@ -15,6 +17,7 @@
 	},
 	"dependencies": {
 		"colors": "^1.4.0",
+		"concurrently": "^5.1.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"lodash": "^4.17.15",
