--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"lodash": "^4.17.15",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"socket.io": "^2.3.0"
 	}
 }
